@@ -1,4 +1,3 @@
-//$HeadURL$
 /*----------------------------------------------------------------------------
  This file is part of deegree, http://deegree.org/
  Copyright (C) 2001-2012 by:
@@ -60,132 +59,148 @@ import org.deegree.workspace.ResourceLocation;
 
 /**
  * File based resource location.
- * 
+ *
  * @author <a href="mailto:schmitz@occamlabs.de">Andreas Schmitz</a>
- * 
  * @since 3.4
  */
 public class DefaultResourceLocation<T extends Resource> implements ResourceLocation<T> {
 
-    private File file;
+	private File file;
 
-    private ResourceIdentifier<T> identifier;
+	private ResourceIdentifier<T> identifier;
 
-    public DefaultResourceLocation( File file, ResourceIdentifier<T> identifier ) {
-        this.file = file;
-        this.identifier = identifier;
-    }
+	public DefaultResourceLocation(File file, ResourceIdentifier<T> identifier) {
+		this.file = file;
+		this.identifier = identifier;
+	}
 
-    @Override
-    public String getNamespace() {
-        InputStream fis = null;
-        XMLStreamReader in = null;
-        try {
-            in = XMLInputFactory.newInstance().createXMLStreamReader( fis = getAsStream() );
-            while ( !in.isStartElement() ) {
-                in.next();
-            }
-            return in.getNamespaceURI();
-        } catch ( Exception e ) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
-        } finally {
-            if ( in != null ) {
-                try {
-                    in.close();
-                } catch ( Exception e ) {
-                    // TODO Auto-generated catch block
-                    e.printStackTrace();
-                }
-            }
-            IOUtils.closeQuietly( fis );
-        }
-        return null;
-    }
+	@Override
+	public String getNamespace() {
+		InputStream fis = null;
+		XMLStreamReader in = null;
+		try {
+			in = XMLInputFactory.newInstance().createXMLStreamReader(fis = getAsStream());
+			while (!in.isStartElement()) {
+				in.next();
+			}
+			return in.getNamespaceURI();
+		}
+		catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		finally {
+			if (in != null) {
+				try {
+					in.close();
+				}
+				catch (Exception e) {
+					// TODO Auto-generated catch block
+					e.printStackTrace();
+				}
+			}
+			IOUtils.closeQuietly(fis);
+		}
+		return null;
+	}
 
-    @Override
-    public ResourceIdentifier<T> getIdentifier() {
-        return identifier;
-    }
+	@Override
+	public ResourceIdentifier<T> getIdentifier() {
+		return identifier;
+	}
 
-    @Override
-    public InputStream getAsStream() {
-        try {
-            return new FileInputStream( file );
-        } catch ( FileNotFoundException e ) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
-        }
-        return null;
-    }
+	@Override
+	public InputStream getAsStream() {
+		try {
+			return new FileInputStream(file);
+		}
+		catch (FileNotFoundException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		return null;
+	}
 
-    @Override
-    public InputStream resolve( String path ) {
-        try {
-            return new FileInputStream( resolveToFile( path ) );
-        } catch ( FileNotFoundException e ) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
-        }
-        return null;
-    }
+	@Override
+	public InputStream resolve(String path) {
+		try {
+			return new FileInputStream(resolveToFile(path));
+		}
+		catch (FileNotFoundException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		return null;
+	}
 
-    @Override
-    public String toString() {
-        return identifier.toString();
-    }
+	@Override
+	public String toString() {
+		return identifier.toString();
+	}
 
-    @Override
-    public File resolveToFile( String path ) {
-        return new File( file.toURI().resolve( path ) );
-    }
+	@Override
+	public File resolveToFile(String path) {
+		return new File(file.toURI().resolve(path));
+	}
 
-    @Override
-    public URL resolveToUrl( String path ) {
-        try {
-            try {
-                URL url = new URL( path );
-                if ( url.toURI().isAbsolute() ) {
-                    return url;
-                }
-            } catch ( Exception e ) {
-                // try as relative
-            }
-            return file.toURI().resolve( path ).toURL();
-        } catch ( Exception e ) {
-            e.printStackTrace();
-        }
-        return null;
-    }
+	@Override
+	public URL resolveToUrl(String path) {
+		try {
+			try {
+				URL url = new URL(path);
+				if (url.toURI().isAbsolute()) {
+					return url;
+				}
+			}
+			catch (Exception e) {
+				// try as relative
+			}
+			return file.toURI().resolve(path).toURL();
+		}
+		catch (Exception e) {
+			e.printStackTrace();
+		}
+		return null;
+	}
 
+	@Override
+	public File getAsFile() {
+		return file;
+	}
 
-    @Override
-    public File getAsFile() {
-        return file;
-    }
+	@Override
+	public void deactivate() {
+		String fileNameWithoutSuffix = parseFileNameWithoutSuffix();
+		File f = new File(file.getParentFile(), fileNameWithoutSuffix + ".ignore");
+		file.renameTo(f);
+		file = f;
+	}
 
-    @Override
-    public void deactivate() {
-        File f = new File( file.getParentFile(), identifier.getId() + ".ignore" );
-        file.renameTo( f );
-        file = f;
-    }
+	@Override
+	public void activate() {
+		String fileNameWithoutSuffix = parseFileNameWithoutSuffix();
+		File f = new File(file.getParentFile(), fileNameWithoutSuffix + ".xml");
+		file.renameTo(f);
+		file = f;
+	}
 
-    @Override
-    public void activate() {
-        File f = new File( file.getParentFile(), identifier.getId() + ".xml" );
-        file.renameTo( f );
-        file = f;
-    }
+	@Override
+	public void setContent(InputStream in) {
+		try {
+			file.getParentFile().mkdirs();
+			FileUtils.copyInputStreamToFile(in, file);
+		}
+		catch (IOException e) {
+			throw new ResourceException(e.getLocalizedMessage(), e);
+		}
+	}
 
-    @Override
-    public void setContent( InputStream in ) {
-        try {
-            file.getParentFile().mkdirs();
-            FileUtils.copyInputStreamToFile( in, file );
-        } catch ( IOException e ) {
-            throw new ResourceException( e.getLocalizedMessage(), e );
-        }
-    }
+	private String parseFileNameWithoutSuffix() {
+		String fileName = file.getName();
+		if (fileName.contains(".")) {
+			return fileName.substring(0, fileName.lastIndexOf("."));
+		}
+		return fileName;
+	}
 
 }
